# Peregrine_PrimeNumbers

./: README.md
PrimeNumbers_Multithreading/primes_mul/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main  main.cpp
PrimeNumbers_SOE/primes_SOE/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  primes_SOE
